k8s_fundamentals/day_3/01_ingress/red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red
  labels:
    app: red
spec:
  containers:
    - name: nginx
      image: nginx:1.19.2
---
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  selector:
    app: red
  ports:
    - port: 80
