k8s_fundamentals/day_3/01_ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /red
            backend:
              serviceName: red
              servicePort: 80
          - path: /blue
            backend:
              serviceName: blue
              servicePort: 80
